# css-verbalizer

./: .gitignore  CMakeLists.txt  README.md  given up code.txt
CSS manipulator/: RulesSelectors.c  color.c  manipulator.c  rule_DS.c  ruler.c  token_DS.c  tokenizer.c  tokenizer.h  verbalizer.c  windows start menu.css
anubhavDS-C/: helpers.c
